replaced nav to company demo

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -36,7 +36,7 @@
 					{{ nav_link('calculators', 'Calculators') }}
 					{{ nav_link('quality_control_sample', 'Quality Control') }}
 					{{ nav_link('guides', 'Guides') }}
-					{{ nav_link('inventory_management_demo', 'Inventory Demo') }}
+					{{ nav_link('inventory_management_demo', 'Company Demo') }}
 					{% if current_user == superuser %}
 					{{ nav_link('stream', 'Stream')}}
 					{{ nav_link('products_wiki', 'Products Wiki')}}
