fixed js in variables

--- a/app/templates/quality_control/qc_results.html
+++ b/app/templates/quality_control/qc_results.html
@@ -519,6 +519,9 @@
 <div class="col-md-4">
 	<div>Note:</div>
 	<div>
+		*LJ chart is plotted using z-score.
+	</div>
+	<div>
 		*Total mean/sd/cv is calculated based on the start date until the end date specified.
 	</div>
 	<div>
