--- a/app/templates/quality_control/qc_variables.html
+++ b/app/templates/quality_control/qc_variables.html
@@ -241,14 +241,6 @@
 				<input type="checkbox" id="edit_reagent_lot_no_checkbox" aria-label="edit_reagent_lot_no_checkbox">
 			</div>
 		</div>
-		<div class="form-group" id="new_reagent_lot_no_container">
-			<label>New reagent lot no:</label>
-			<input class="form-control" id="new_reagent_lot_no">
-		</div>
-		<div class="form-group">
-			<label class="control-label">Expiry:</label>
-			<input class="form-control" id="expiry_rlot_edit" type="date" >
-		</div>
 		<div class="form-group">
 			<label class="control-label">Analyte:</label>
 			<select id="select_analyte_for_rlot_edit" class="form-control">
@@ -257,6 +249,14 @@
 				<option value="{{c.id}}">{{ c.analyte }}</option>
 				{% endfor %}
 			</select>
+		</div>
+		<div class="form-group" id="new_reagent_lot_no_container">
+			<label>New reagent lot no:</label>
+			<input class="form-control" id="new_reagent_lot_no">
+		</div>
+		<div class="form-group">
+			<label class="control-label">Expiry:</label>
+			<input class="form-control" id="expiry_rlot_edit" type="date" >
 		</div>
       </div>
       <div class="modal-footer">
@@ -345,20 +345,21 @@
 			<input class="form-control" id="new_control_lot_no">
 		</div>
 		<div class="form-group">
+			<label class="control-label">Control name:</label>
+			<select id="select_control_ctrl_lot_edit" class="form-control">
+				<option value="0"></option>
+				{% for c in comp_controls %}
+				<option value="{{c.id}}">{{ c.control_name }}</option>
+				{% endfor %}
+			</select>
+		</div>
+		<div class="form-group">
 			<label class="control-label">Level:</label>
 			<input class="form-control" id="level_ctrl_lot_edit">
 		</div>
 		<div class="form-group">
 			<label class="control-label">Expiry:</label>
 			<input class="form-control" id="expiry_ctrl_lot_edit" type="date" >
-		</div>
-		<div class="form-group">
-			<label class="control-label">Control name:</label>
-			<select id="select_control_ctrl_lot_edit" class="form-control">
-			{% for c in comp_controls %}
-			<option value="{{c.id}}">{{ c.control_name }}</option>
-			{% endfor %}
-		</select>
 		</div>
       </div>
       <div class="modal-footer">
