--- a/app/templates/company_base.html
+++ b/app/templates/company_base.html
@@ -81,6 +81,7 @@
 
 {% block styles %}
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-129673699-2"></script>
+	<meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"> 
 	<script>
 	  window.dataLayer = window.dataLayer || [];
 	  function gtag(){dataLayer.push(arguments);}
